# hexagonal-fastapi-jobboard

./: .coveragerc  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  logs  pyproject.toml  pytype.cfg  sql_app.db
.github/workflows/: lint.yml  test.yml  type.yml
scripts/: format-imports.sh  format.sh  lint.sh
src/jobboard/: __init__.py
src/jobboard/adapters/db/: alembic.ini  orm.py  repository.py  unit_of_work.py  utils.py
src/jobboard/adapters/db/migrations/: env.py
src/jobboard/adapters/db/migrations/versions/: 323b494d156e_add_users_and_jobs_tables.py  7794fd8602f8_.py  b40c51acc97d_.py
src/jobboard/adapters/entrypoints/: __init__.py  application.py
src/jobboard/adapters/entrypoints/api/: base.py  utils.py
src/jobboard/adapters/entrypoints/api/v1/: route_jobs.py  route_login.py  route_users.py
src/jobboard/adapters/entrypoints/apis/: base.py
src/jobboard/adapters/entrypoints/apis/version1/: route_jobs.py  route_login.py  route_users.py
src/jobboard/adapters/entrypoints/webapps/: base.py
src/jobboard/adapters/entrypoints/webapps/auth/: forms.py  route_login.py
src/jobboard/adapters/entrypoints/webapps/jobs/: forms.py  route_jobs.py
src/jobboard/adapters/entrypoints/webapps/users/: forms.py  route_users.py
src/jobboard/adapters/repositories/: jobs.py  users.py
src/jobboard/adapters/unit_of_works/: jobs.py  users.py
src/jobboard/adapters/use_cases/: jobs.py  users.py
src/jobboard/configurator/: config.py  containers.py
src/jobboard/configurator/common/: security.py
src/jobboard/configurator/logger/: custom_logging.py  logging_config.json
src/jobboard/configurator/metrics/: prometheus.yml
src/jobboard/configurator/tracer/: jaeger_tracing.py
src/jobboard/domain/model/: events.py  job.py  model.py  user.py
src/jobboard/domain/ports/: job_service.py  messagebus.py  repository.py  responses.py  unit_of_work.py  user_service.py
src/jobboard/domain/ports/common/: messagebus.py
src/jobboard/domain/ports/repositories/: jobs.py  users.py
src/jobboard/domain/ports/unit_of_works/: jobs.py  users.py
src/jobboard/domain/ports/use_cases/: jobs.py  users.py
src/jobboard/domain/schemas/: jobs.py  users.py
src/jobboard/hexagon/ports/: job_service.py  messagebus.py  repository.py  unit_of_work.py  user_service.py
src/jobboard/hexagon/schemas/: users.py
src/jobboard/main/: config.py  containers.py  security.py
tests/: conftest.py  fake_container.py
tests/domain/: test_job.py  test_user.py
tests/test_routes/: test_jobs.py  test_users.py
tests/utils/: users.py
