[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "jobboard"
authors = [{name = "Shako Rzayev", email = "rzayev.sehriyar@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE.md"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.9"
dependencies = [
    "fastapi >= 0.85.0",
    "uvicorn >= 0.18.3",
    "dependency-injector >= 4.40.0",
    "psycopg2-binary >= 2.9.3",
    "python-dotenv >= 0.21.0",
    "passlib[bcrypt] >= 1.7.4",
    "python-jose >= 3.3.0",
    "sqlalchemy >= 1.4.41",
    "databases >= 0.6.1",
    "databases[sqlite] >= 0.6.1",
    "pydantic[email] >= 1.10.2",
    "jinja2 >=3.1.",
    "python-multipart >=0.0.5 "
]

[project.optional-dependencies]
dev = [
    "black >=22.3.0",
    "pylint >=2.12.2",
    "isort >=5.9.3",
    "autoflake >=1.4",
    "flake8 >=4.0.1",
    "pre-commit >=2.17.0",
    "pytype >=2022.1.31",
    ]
test = [
    "pytest >=7.1.3",
    "pytest-cov >= 3.0.0",
]

[tool.isort]
profile = "black"
py_version = 39
skip = [".gitignore", ".dockerignore"]
extend_skip = [".md", ".json"]
skip_glob = ["docs/*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'